Don't save SVAC histogram files.
Serialize crumb merges: merit, recon, cal, gcr.
Don't run registerPrep on failed anything.
Move crumble params to config.

Do run cleanup.
Put data in OpsSim2 in datacat&xroot.
Back to 5k max avg crumb.
-------------------------------------------

1.39 OpsSim2, take 2
-----------------
Monitor dp20080229_v4

FastMon reads magic7 file and does IGRF monitoring.  But I think the results
don't get merged.
Implemented FastMon trending, but it's all commented out.
Stage input digi even if it's on afs to avoid reading it multiple times.

Delete DOWNLINK_RAWDIR in cleanupDl.
-------------------------------------------

1.40 OpsSim2, live portion
-----------------
Common v2r13p3
FastMon v2r11p0
Monitor dp20080304

FastMon trending.
Launch ASP.

Use goofy threshholds in digi & recon (MC only).
-------------------------------------------

1.41 post OpsSim2
-----------------
AlarmsCfg v1r0p0
DigiReconCalMeritCfg v1r0p0
FastMonCfg v1r0p0
Common v3r0p0
FastMon v3r0p0
Monitor v1r0p0
IGRF v1r0p0

RunVerify stuff added to L1Proc.
Make and register ACD plot tarball.
Separate FastMon tuple and histograms.
Alarm exceptions.
Use monitoring configs from separate packages.
Use environment variables to override task name & version and builds dir.
cleanupDl depends on doLci.checkRunLci, but not kludgeAsp.
Use MOOT for trigger config in digitization.
Use LCI config for fastMonLci.
Copy magic7 file to run directory (and register it).

Don't do run cleanup.
-------------------------------------------

1.42
-----------------
GR v13r11p4
EngineeringModelRoot v3r12
FastMon v3r0p5
FastMonCfg v1r0p1
IGRF v1r0p1
TestReport v5r6

Put variables cotrolling task name, version, location, and build dir in XML
and setup.sh.
compile_stuff.py does cvs packages as well as cmt.
Hardwire isocPlatform to rhel3_gcc32.

Put data under IandT instead of OpsSim2.
kludgeASP does nothing.
-------------------------------------------